# HowToVulkanIn2026

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
sources/: main.cpp  tutorial.cpp
